--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
-      "ext-json": "*"
+        "socialiteproviders/discord": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
