--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "socialiteproviders/discord": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.7",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
         "laravel/ui": "^1.0",
@@ -31,7 +32,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "barryvdh/laravel-ide-helper"
+            ]
         }
     },
     "autoload": {
@@ -51,6 +54,10 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "database-reset": [
+            "@php artisan migrate:fresh",
+            "@php artisan db:seed"
+        ],
         "clear-caches": [
             "@php artisan cache:clear",
             "@php artisan config:clear",
