--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
         "css-mqpacker": "^7.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-polyfill": "^2.0.0",
         "lodash": "^4.17.13",
         "minify-html-webpack-plugin": "^1.0.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "ts-loader": "^8.0.1",
+        "typescript": "^3.9.6",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
