--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,13 @@
     "prefer-stable": true,
     "scripts": {
         "update": [
-            "@git pull origin master"
+            "@git pull origin master",
+            "@php artisan cache:clear",
+            "@php artisan config:cache",
+            "@php artisan route:cache",
+            "@php artisan view:cache",
+            "@php artisan clear-compiled",
+            "@composer dump-autoload --optimize"
         ],
         "prod": [
             "@php artisan cache:clear",
@@ -64,15 +70,17 @@
             "@php artisan clear-compiled",
             "@composer dump-autoload --optimize"
         ],
-        "database-reset": [
-            "@php artisan migrate:fresh",
-            "@php artisan db:seed"
-        ],
-        "clear-caches": [
+        "dev": [
             "@php artisan cache:clear",
             "@php artisan config:clear",
             "@php artisan route:clear",
-            "@php artisan view:clear"
+            "@php artisan view:clear",
+            "@php artisan clear-compiled",
+            "@composer dump-autoload"
+        ],
+        "database-reset": [
+            "@php artisan migrate:fresh",
+            "@php artisan db:seed"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
