--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "ext-json": "*",
         "fideloper/proxy": "^4.0",
+        "google/apiclient": "^2.7",
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
