--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-json": "*",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.7",
+        "htmlmin/htmlmin": "^7.0",
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
