--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
-        "socialiteproviders/discord": "^2.0"
+        "socialiteproviders/discord": "^2.0",
+      "ext-mbstring": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -80,7 +81,7 @@
             "@php artisan clear-compiled",
             "@composer dump-autoload"
         ],
-        "database-reset": [
+        "reset-database": [
             "@php artisan migrate:fresh",
             "@php artisan db:seed"
         ],
