--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "private": true,
     "scripts": {
-        "serve": "php artisan serve --host=localhost",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
@@ -11,6 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/plugin-syntax-jsx": "^7.10.4",
+        "@babel/preset-react": "^7.10.4",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
@@ -21,6 +22,8 @@
         "lodash": "^4.17.13",
         "minify-html-webpack-plugin": "^1.0.0",
         "popper.js": "^1.12",
+        "react": "^16.13.1",
+        "react-select": "^3.1.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
@@ -30,6 +33,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "autoprefixer": "^9.8.6"
+        "autoprefixer": "^9.8.6",
+        "react-dom": "^16.13.1",
+        "select2": "^4.0.13",
+        "sprintf-js": "^1.1.2"
     }
 }
