--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-/vendor/
-node_modules/
+/node_modules
+/public/hot
+/public/storage
+/public/assets/css
+/public/assets/js
+/public/mix-manifest.json
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
 npm-debug.log
 yarn-error.log
-
-public/assets/css
-public/assets/js
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
+/.idea
+/.vscode
