--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
