--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
-        "socialiteproviders/discord": "^2.0",
-      "ext-mbstring": "*"
+        "socialiteproviders/discord": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
