--- a/package.json
+++ b/package.json
@@ -2,42 +2,34 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
         "@babel/plugin-syntax-jsx": "^7.10.4",
         "@babel/preset-react": "^7.10.4",
-        "axios": "^0.19",
+        "autoprefixer": "^10.4.4",
+        "axios": "^0.26.1",
         "bootstrap": "^4.0.0",
-        "browser-sync": "^2.26.12",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^7.0",
         "css-mqpacker": "^7.0.0",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
-        "laravel-mix-polyfill": "^2.0.0",
+        "laravel-mix": "^6.0.43",
+        "laravel-mix-polyfill": "^3.0.1",
         "lodash": "^4.17.13",
-        "minify-html-webpack-plugin": "^1.0.0",
         "popper.js": "^1.12",
         "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-select": "^3.1.0",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "select2": "^4.1.0-rc.0",
+        "sprintf-js": "^1.1.2",
         "ts-loader": "^8.0.1",
-        "typescript": "^3.9.6",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
-    },
-    "dependencies": {
-        "autoprefixer": "^9.8.6",
-        "react-dom": "^16.13.1",
-        "select2": "^4.0.13",
-        "sprintf-js": "^1.1.2"
+        "typescript": "^3.9.6"
     }
 }
